--- a/SITA2025_高須賀/v1.tex
+++ b/SITA2025_高須賀/v1.tex
@@ -180,8 +180,8 @@ SOMの各ノードに割り当てられたインデックス集合$I_c$に対し
 \subsection{データと前処理}
 \begin{itemize}
 \item \textbf{物理量}：海面更正気圧（SLP）
-\item \textbf{領域}：東アジア域（15-55°N, 115-155°E）
-\item \textbf{期間}：学習1991-1999年，検証2000年（日次09JST）
+\item \textbf{領域}：日本周辺域（15-55°N, 115-155°E）
+\item \textbf{期間}：学習1991-1997年，検証1998-2000年（日次09JST）
 \item \textbf{ラベル}：参考文献\cite{吉野2002日本の気候}の付録B「気圧配置ごよみ」準拠
 \item \textbf{前処理}：Pa→hPa変換後，領域平均を引く．
 \end{itemize}
@@ -237,7 +237,7 @@ SOMの各ノードに割り当てられたインデックス集合$I_c$に対し
 \end{itemize}
 学習期および独立検証期に対して算出する．
 
-\section{実験結果（実装出力に基づく記述）}
+\section{実験結果}
 
 
 \section{考察}
