--- a/SITA2025_高須賀/v1.tex
+++ b/SITA2025_高須賀/v1.tex
@@ -272,7 +272,7 @@ SOMの各ノードに割り当てられたインデックス集合$I_c$に対し
 \section{実験結果}
 本節では，seed値を1〜50の間で50回試行した集計結果を示す．まず，手法別のMacro Recall（学習・検証）およびNodewiseMatchRate（学習）の要約統計を同一表（表\ref{tab:macro_nodewise_summary}）にまとめて示す．続いて，基本ラベルごとの平均再現率の横断ピボット表を，学習（表\ref{tab:pivot_train}）と検証（表\ref{tab:pivot_valid}）でそれぞれ提示する（表が大きいため横向き・大判で示す）．
 
-seed=1〜50の50試行において学習期のMacro RecallはS1,KA／S1,GS,KA／GS,KAが約0.37$\pm$0.02で最上位であった．検証期ではS1,KAが0.23$\pm$0.02で最良となった．すなわち，構造（曲率）と鋭さ（勾配）を統合するS1,KAが汎化で優位である．一方，NodewiseMatchRate（学習）は複合手法のスコアが低い．る．
+seed=1〜50の50試行において学習期のMacro RecallはS1,KA／S1,GS,KA／GS,KAが約0.37$\pm$0.02で最上位であった．検証期ではS1,KAが0.23$\pm$0.02で最良となった．すなわち，構造（曲率）と鋭さ（勾配）を統合するS1,KAが汎化で優位である．一方，NodewiseMatchRate（学習）は複合手法のスコアが低い．
 
 ラベル別では学習期の台風系6AでS1,KAがCorrect平均3.66・Recall0.61と突出し，6BはS1が相対的に良好であった．ただし検証期の6A/6B/6Cはいずれも再現率が極めて低く，稀少クラスの課題が顕著だった．ERA5の基本ラベル分布が大きく不均衡（例：1=10.3％，3B=8.8％，6A=0.19％，6C=0.055％）で，複合ラベルが約52.7％を占めることがこの傾向の一因である．以上より，実運用ではS1,KAを標準距離としつつ，代表整合の確認にEUCLIDEANを併用する構成が妥当と考える（表\ref{tab:macro_nodewise_summary}とピボット表参照）．
 
@@ -361,10 +361,10 @@ centroidは平均化により勾配が平滑化されやすい一方，medoidは
 S1は勾配差に敏感，KAPPAは曲率（幾何）を評価するため，S1,KAは形状と鋭さを同時に捉えBMU探索の頑健性を高める．その結果，検証Macro Recallで最良を示した．一方，NodewiseMatchRateではEUCLIDEANが最大であり，ノード内多数決とmedoidラベルの一致を生みやすい（振幅差に整合）．用途により，識別（Macro Recall）優先か，ノード代表性（一致率）優先かで距離の使い分けが必要である．
 
 \subsection{ラベル不均衡と評価設計}
-台風系（6A/6B/6C）は出現頻度が極端に低く，さらに複合場が約半数を占めるため，検証で再現率が低下しやすい．季節別SOM（冬・梅雨・台風季）や階層的分類（大局型→サブタイプ），外部事象フラグの併用（台風客観解析）により稀少クラスの頑健性を補える．前提に扱う．
+台風系（6A/6B/6C）は出現頻度が極端に低く，さらに複合場が約半数を占めるため，検証で再現率が低下しやすい．季節別SOM（冬・梅雨・台風季）や階層的分類（大局型→サブタイプ），外部事象フラグの併用（台風客観解析）により稀少クラスの頑健性を補える．
 
-\sectionBatch-SOM上で，既存手法（S1，SSIM5，EUCLIDEAN）と提案手法（KAPPA，GSSIM，S1,KA，GS,KA，S1,GS,KA）の8手法を同一条件で比較できる実験枠組みを構築した．実装に準拠した厳密な数式定義を提示し，評価は基本ラベルに対するMacro Recallとノード代表一致率で行った．centroidの代わりにmedoidを採用することで代表パターンの鋭さを保持できる．S1,KAのスコアが高く実務ではS1,KAの運用が望ましい．今後は多変量拡張，季節別最適化，および循環統計の総合評価（例：Jensen–Shannon距離）への発展を予定する．しい．
-\end{itemize}
+\section{まとめ}
+Batch-SOM上で，既存手法（S1，SSIM5，EUCLIDEAN）と提案手法（KAPPA，GSSIM，S1,KA，GS,KA，S1,GS,KA）の8手法を同一条件で比較できる実験枠組みを構築した．実装に準拠した厳密な数式定義を提示し，評価は基本ラベルに対するMacro Recallとノード代表一致率で行った．centroidの代わりにmedoidを採用することで代表パターンの鋭さを保持できる．S1,KAのスコアが高く実務ではS1,KAの運用が望ましい．今後は多変量拡張，季節別最適化，および循環統計の総合評価（例：Jensen–Shannon距離）への発展を予定する．
 
 \section*{付録：数式内の変数説明}
 \begin{itemize}
@@ -377,37 +377,6 @@ S1は勾配差に敏感，KAPPAは曲率（幾何）を評価するため，S1,K
 \item $g_x^\cdot,g_y^\cdot$：内部共通格子での勾配成分，$G^\cdot$：勾配強度
 \item $\bm{n}$：正規化勾配ベクトル，$\kappa(z)=\nabla\cdot\bm{n}$（中心差分）
 \item $\varepsilon$：数値安定化の微小正値（$10^{-12}$）
-\end{itemize}
-
-\bibliographystyle{sieicej}
-\bibliography{ref}
-\end{document}
-ilon$：数値安定化の微小正値（$10^{-12}$）
-\end{itemize}
-
-\bibliographystyle{sieicej}
-\bibliography{ref}
-\end{document}
-)=\nabla\cdot\bm{n}$（中心差分）
-\item $\varepsilon$：数値安定化の微小正値（$10^{-12}$）
-\end{itemize}
-
-\bibliographystyle{sieicej}
-\bibliography{ref}
-\end{document}
-数値安定化の微小正値（$10^{-12}$）
-\end{itemize}
-
-\bibliographystyle{sieicej}
-\bibliography{ref}
-\end{document}
-数値安定化の微小正値（$10^{-12}$）
-\end{itemize}
-
-\bibliographystyle{sieicej}
-\bibliography{ref}
-\end{document}
-定化の微小正値（$10^{-12}$）
 \end{itemize}
 
 \bibliographystyle{sieicej}
